Update 'ru5sqd76s-go' component image to: nexus-docker-nexus.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/rhtap-qe-go:e315434fc9d91cc16f93da4816d9f457a4fabd93@sha256:7f9440f592de7e90b25000283930cbf9952283d6b82645a6c3f8006f82a04d64

--- a/components/ru5sqd76s-go/overlays/development/deployment-patch.yaml
+++ b/components/ru5sqd76s-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ru5sqd76s-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: nexus-docker-nexus.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/rhtap-qe-go:e315434fc9d91cc16f93da4816d9f457a4fabd93@sha256:7f9440f592de7e90b25000283930cbf9952283d6b82645a6c3f8006f82a04d64
+          name: container-image
